[package]
name = "mcutie"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Mossop/mcutie"
description = "A no-std, no-alloc, opinionated MQTT client for IoT devices"

[features]
default = ["homeassistant"]
homeassistant = ["serde"]
serde = ["dep:serde", "dep:serde-json-core"]
defmt = ["dep:defmt", "embassy-net/defmt"]
log = ["dep:log"]

[dependencies]
defmt = { version = "0.3.10", optional = true }
log = { version = "0.4.26", optional = true }
embassy-net = { version = "0.6.0", features = [
  "dns",
  "medium-ip",
  "medium-ethernet",
  "proto-ipv4",
  "tcp",
] }
embassy-time = "0.4.0"
serde = { version = "1.0.218", default-features = false, features = [
  "derive",
], optional = true }
serde-json-core = { version = "0.6.0", optional = true }
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embedded-io-async = "0.6.1"
mqttrs = { git = "https://github.com/00imvj00/mqttrs", rev = "dd9d381b401b1b7353c43b36123f1b2ea5fa80a1", default-features = false }
heapless = "0.8.0"
embedded-io = "0.6.1"
once_cell = { version = "1.20.3", default-features = false, features = [
  "critical-section",
] }
hex = { version = "0.4.3", default-features = false }
pin-project = "1.1.10"

[dev-dependencies]
futures-executor = { version = "0.3.31", features = ["thread-pool"] }
futures-test = "0.3.31"
futures-timer = "3.0.3"
futures-util = "0.3.31"
static_cell = "2.1.0"

# duplicate dependencies for testing
# these dependencies need the std featue in tests
embassy-sync = { version = "0.6.2", features = ["std"] }
